<resources>

    <string name="app_name">ContactCard</string>
    <string name="action_settings">Settings</string>

    <!--Personal information-->
    <string name="gender">Gender: </string>
    <string name="title">Title: </string>
    <string name="firstname">Firstname: </string>
    <string name="lastname">Lastname: </string>
    <string name="location">Location: </string>
    <string name="street">Street: </string>
    <string name="city">City: </string>
    <string name="state">State: </string>
    <string name="zipcode">Zipcode: </string>
    <string name="email">Email: </string>
    <string name="username">Username: </string>
    <string name="phone">Phone: </string>
    <string name="cell">Cell: </string>
    <string name="nationality">Nationality: </string>

    <!--Change information-->
    <string name="empty">......</string>

</resources>
