<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<GridLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:orientation="horizontal">

    <!--ImageBackground-->
    <!--
    <ImageView android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        android:id="@+id/background_image"
        android:src="@drawable/background_image"/>
    -->

    <!--Image-->
    <ImageView android:layout_width="120dp"
        android:layout_height="120dp"
        android:padding="10dp"
        android:id="@+id/profile_image"
        android:src="@drawable/profile_shadow" />

    <!-- Firstlayout -->
    <LinearLayout android:layout_column="0"
        android:layout_row="1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:padding="10dp"
        android:layout_gravity="right"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

        <!--Text-->
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/gender"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/title"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/firstname"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/lastname"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/street"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/city"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/state"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/zipcode"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/email"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/username"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/phone"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/cell"
            android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/nationality"
            android:textStyle="bold"/>

    </LinearLayout>

    <!-- Secondlayout -->

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_column="1"
        android:layout_row="1"
        android:padding="10dp"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:background="@android:color/white">

        <!--Text-->
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/gender"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/title"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/firstname"
            android:text="@string/empty"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/lastname"
            android:text="@string/empty"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/street"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/city"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/state"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/zipcode"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/email"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/username"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/phone"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/cell"
            android:text="@string/empty" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/nationality"
            android:text="@string/empty" />

        </LinearLayout>
    </GridLayout>
</ScrollView>
